# marching-squares

./: .gitignore  CMakeLists.txt
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp
src/shaders/: fragment.txt  vertex.txt
